--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,12 @@
 {
-  "extends": "next/core-web-vitals"
+  "root": true,
+  "parser": "@label/eslint-parser",
+  "extends": [
+    "next/core-web-vitals",
+    "eslint:recommended",
+    "plugin: react/recommended",
+    "plugin: import/errors",
+    "plugin: import/warnings"
+    
+  ]
 }
